gtk+2.0 (2.24.30-2) UNRELEASED; urgency=medium

  * Acknowledge NMU, thanks Salvatore Bonaccorso.

 -- Michael Biebl <biebl@debian.org>  Sun, 22 May 2016 08:20:15 +0200

gtk+2.0 (2.24.30-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * CVE-2013-7447: Integer overflow in image handling (Closes: #799275)

 -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 18 Mar 2016 20:20:37 +0100

gtk+2.0 (2.24.30-1) unstable; urgency=medium

  * New upstream release 2.24.30
    - Support Randr 1.5 monitor information
    - Fixes build against newer gdk-pixbuf
  * debian/patches/005_support_disabling_x11_extensions.patch: Refresh.

 -- Iain Lane <laney@debian.org>  Mon, 07 Mar 2016 13:51:18 +0000

gtk+2.0 (2.24.29-1) unstable; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Mon, 14 Dec 2015 01:12:27 +0100

gtk+2.0 (2.24.28-1) unstable; urgency=medium

  * New upstream release.
  * Refresh patches.
  * Drop obsolete Breaks/Conflicts/Replaces from pre-wheezy.
  * Stop including image data when generating the icon caches since the cache
    files tend to grow rather large and aren't that useful anymore nowadays.
  * Explicitly build the man pages, upstream no longer ships them in the dist
    tarball.
  * Add Build-Depends on docbook-xsl and libxml2-utils and move docbook-xml
    and docbook-utils from Build-Depends-Indep to Build-Depends. Those are
    required to build the man pages which are shipped in arch:any packages.
  * Bump Standards-Version to 3.9.6.
  * Don't enable introspection and man pages for udeb build.

 -- Michael Biebl <biebl@debian.org>  Sun, 07 Jun 2015 17:00:08 +0200

gtk+2.0 (2.24.25-3) unstable; urgency=medium

  * 0002-gdk-Fix-GdkWindowFilter-internal-refcounting.patch
    0003-gdkwindow-Fix-event-unref-iteration.patch: Cherry-pick two commits
    from upstream gtk2 branch to fix refcounting errors in light of the
    event_apply_filters change in the previous upload. This was causing