@@ -1,4 +1,2 @@
 # from the shared flavor
-debian/install/shared/usr/share/man/man1/gtk-update-icon-cache.1 usr/share/man/man1
 debian/install/shared/usr/share/man/man1/gtk-query-immodules-@APIVER@.1 usr/share/man/man1
-debian/update-icon-caches usr/sbin
