@@ -1,4 +1,3 @@
-@LIBDIR@/@SHARED_PKG@/gtk-update-icon-cache usr/bin/gtk-update-icon-cache
 usr/share/doc/@COMMON_PKG@/changelog.gz usr/share/doc/@BIN_PKG@/changelog.gz
 usr/share/doc/@COMMON_PKG@/NEWS.gz usr/share/doc/@BIN_PKG@/NEWS.gz
 usr/share/doc/@COMMON_PKG@/README.gz usr/share/doc/@BIN_PKG@/README.gz
