@@ -1,2 +1,1 @@
 debian/gtk-options.7
-debian/update-icon-caches.8
