@@ -1,6 +1,11 @@
 gtk+2.0 (2.24.30-2) UNRELEASED; urgency=medium
 
   * Acknowledge NMU, thanks Salvatore Bonaccorso.
+  * Drop gtk-update-icon-cache from libgtk2.0-bin. From now on we only provide
+    one implementation which is built from src:gtk+3.0 and shipped in a
+    separate package called gtk-update-icon-cache. To simplify the transition
+    make libgtk2.0-bin depend on gtk-update-icon-cache. Once all theme
+    packages have been updated, this dependency can be dropped.
 
  -- Michael Biebl <biebl@debian.org>  Sun, 22 May 2016 08:20:15 +0200
 
